chore: added an authguard, menu items if logged in

--- a/frontend/src/app/account/account.component.html
+++ b/frontend/src/app/account/account.component.html
@@ -3,5 +3,6 @@
     <a mat-list-item href="">Parkplätze verwalten</a>
     <a mat-list-item href="">Parkplatzrevervationen anzeigen</a>
     <a mat-list-item href="">Benutzerinformationen anpassen</a>
+    <a mat-list-item (click)="logout()">Abmelden</a>
   </mat-nav-list>
 </mat-card>
