--- a/frontend/src/app/parking/parking.component.html
+++ b/frontend/src/app/parking/parking.component.html
@@ -2,22 +2,20 @@
   <h3>Finde deinen Parkplatz</h3>
   <form class="search-form">
     <mat-form-field appearance="fill">
-      <input type="input" matInput placeholder="Ort">
+      <input type="input" matInput [value]="location" placeholder="Ort">
     </mat-form-field>
-    <div class="buttons">
-      <button mat-raised-button color="primary">Datum/Zeit</button>
-      <button mat-raised-button color="primary">ab sofort</button>
+    <mat-form-field *ngIf="alternativeDateTime">
+      <input matInput type="datetime-local" [value]="dateTimeFrom" placeholder="Datum/Zeit">
+    </mat-form-field>
+    <mat-form-field *ngIf="alternativeDateTime">
+      <input matInput type="number" [value]="duration" placeholder="Dauer">
+    </mat-form-field>
+    <div class="buttons" *ngIf="!alternativeDateTime">
+      <button mat-raised-button type="button" (click)="alternativeDateTime = !alternativeDateTime">Datum/Zeit</button>
+      <button mat-raised-button color="primary" [routerLink]="['/parking', 'list']" [queryParams]="{ location: location }" type="submit">ab sofort <mat-icon>arrow_right_alt</mat-icon></button>
+    </div>
+    <div class="buttons" *ngIf="alternativeDateTime">
+      <button mat-raised-button color="primary" [routerLink]="['/parking', 'list']" [queryParams]="{ location: location, dateTimeFrom: dateTimeFrom, duration: duration }" type="submit">suchen <mat-icon>arrow_right_alt</mat-icon></button>
     </div>
   </form>
-</mat-card>
-<mat-card>
-  <mat-list>
-    <mat-list-item *ngFor="let parking of parkings">{{ parking.street }}</mat-list-item>
-  </mat-list>
-</mat-card>
-<mat-card *ngIf="isLoggedIn">
-  <button type="button" (click)="logout()">Log out</button>
-</mat-card>
-<mat-card *ngIf="!isLoggedIn">
-  <button type="button" (click)="login()">Log in</button>
 </mat-card>
