--- a/frontend/src/app/account/account.component.html
+++ b/frontend/src/app/account/account.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <mat-nav-list>
-    <a mat-list-item href="">Parkplätze verwalten</a>
+    <a mat-list-item routerLink="/parkingAdministration" routerLinkActive="active">Parkplätze verwalten</a>
     <a mat-list-item href="">Parkplatzrevervationen anzeigen</a>
     <a mat-list-item href="">Benutzerinformationen anpassen</a>
     <a mat-list-item (click)="logout()">Abmelden</a>
