--- a/frontend/src/app/parking/parkingList/parkingList.component.html
+++ b/frontend/src/app/parking/parkingList/parkingList.component.html
@@ -1,5 +1,7 @@
 <mat-card>
   <mat-list>
-    <mat-list-item *ngFor="let parking of parkings">{{ parking.Street }} {{ parking.StreetNo }}{{ parking.StreetNoSuffix }}<br>{{ parking.ZIP }} {{ parking.Location }}</mat-list-item>
+    <mat-list-item *ngFor="let parking of parkings">{{ parking.Street }} {{ parking.StreetNo }}{{ parking.StreetNoSuffix }}<br>{{ parking.ZIP }} {{ parking.Location }}
+    <app-reservation-edit *ngIf="IsReservationPending"></app-reservation-edit>
+    </mat-list-item>
   </mat-list>
 </mat-card>
