--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,9 +1,21 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/theming';
+@include mat-core();
+
+$custom-typography: mat-typography-config(
+  $font-family: 'Raleway'
+);
+@include angular-material-typography($custom-typography);
+
+$my-app-primary: mat-palette($mat-blue, 900);
+$my-app-accent:  mat-palette($mat-grey, 50);
+$my-app-warn:    mat-palette($mat-deep-orange);
+$my-app-theme: mat-dark-theme($my-app-primary, $my-app-accent, $my-app-warn);
+@include angular-material-theme($my-app-theme);
+
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
-mat-sidenav-content {
+body {
+  margin: 0;
   background-image: url("assets/parking_background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
