--- a/frontend/src/app/parking/parking.component.scss
+++ b/frontend/src/app/parking/parking.component.scss
@@ -1,3 +1,16 @@
+.buttonbox {
+  height: 50px;
+  display: flex;
+  justify-content: flex-end;
+}
+
 .buttons {
+  display: flex;
   justify-content: space-between;
+  margin: 10px;
+}
+
+.deleteButton {
+  margin-top: 10px;
+  margin-right: 10px;
 }
