--- a/frontend/src/app/parkingAdministration/parkingAdministration.component.scss
+++ b/frontend/src/app/parkingAdministration/parkingAdministration.component.scss
@@ -7,6 +7,13 @@
   flex-grow: 3;
 }
 
+.buttonbox {
+  height: 50px;
+  display: flex;
+  justify-content: flex-end;
+}
+
 .addButton {
-  margin-left: 16px;
+  margin-top: 10px;
+  margin-right: 10px;
 }
