--- a/frontend/src/app/parkingAdministration/parkingAdministrationItemEdit/parkingAdministrationItemEdit.component.html
+++ b/frontend/src/app/parkingAdministration/parkingAdministrationItemEdit/parkingAdministrationItemEdit.component.html
@@ -1,3 +1,7 @@
+<div class="buttonbox">
+  <button mat-mini-fab color="ancent" type="button" mat-button *ngIf="parking?.id" (click)="deleteParking(parking?.id)" class="deleteButton"><mat-icon>delete</mat-icon></button>
+</div>
+
 <form (submit)="onAddOrEdit(parkingForm.value)" [formGroup]="parkingForm">
   <mat-card>
       <mat-form-field class="hiddenField">
@@ -31,18 +35,15 @@
         <input matInput placeholder="Preis pro Stunde" formControlName="PricePerHour">
         <mat-error *ngIf="f.PricePerHour.invalid" class="alert alert-danger">Betrag in CHF fehlt</mat-error>
       </mat-form-field>
-      <mat-card-actions>
-        <div class="container">
-          <div>
-            <button type="submit" mat-button routerLink="/parkingAdministration">Zurück</button>
-          </div>
-          <div>
-            <button type="submit" mat-raised-button color="primary" *ngIf="!parking?.id" [disabled]="parkingForm.invalid || parkingForm.pristine">Hinzufügen</button>
-            <button type="button" mat-button *ngIf="parking?.id" (click)="deleteParking(parking?.id)">Löschen</button>
-            <button type="button" mat-button [disabled]="parkingForm.pristine" (click)="resetForm()">Zurücksetzen</button>
-            <button type="submit" mat-raised-button color="primary" *ngIf="parking?.id" [disabled]="parkingForm.invalid || parkingForm.pristine">Ändern</button>
-          </div>
-        </div>
-      </mat-card-actions>
   </mat-card>
+  <div class="container">
+    <div>
+      <button type="submit" mat-raised-button routerLink="/parkingAdministration"><mat-icon>arrow_back</mat-icon></button>
+    </div>
+    <div class="buttonsright">
+      <button type="submit" mat-raised-button *ngIf="!parking?.id" [disabled]="parkingForm.invalid || parkingForm.pristine">Hinzufügen</button>
+      <button type="button" mat-raised-button [disabled]="parkingForm.pristine" (click)="resetForm()">Zurücksetzen</button>
+      <button type="submit" mat-raised-button color="primary" *ngIf="parking?.id" [disabled]="parkingForm.invalid || parkingForm.pristine">Ändern</button>
+    </div>
+  </div>
 </form>
