--- a/frontend/src/app/nav/nav.component.html
+++ b/frontend/src/app/nav/nav.component.html
@@ -1,10 +1,15 @@
 <mat-toolbar color="accent">
   <mat-toolbar-row>
-    <span>{{ appTitle }}</span>
+    <span class="mat-toolbar-title">{{ appTitle }}</span>
   </mat-toolbar-row>
 </mat-toolbar>
 
 <div class="progress-bar" style="height: 3px;">
   <mat-progress-bar *ngIf="globals?.isLoading" mode="indeterminate"></mat-progress-bar>
 </div>
-<router-outlet></router-outlet>
+
+<div class="center">
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>
+</div>
