--- a/frontend/src/app/nav/nav.component.scss
+++ b/frontend/src/app/nav/nav.component.scss
@@ -1,3 +1,25 @@
+.center {
+  display: flex;
+  justify-content: center;
+}
+
+.content {
+  max-width: 800px;
+  min-width: 500px;
+}
+
+mat-toolbar-row {
+  display: flex;
+  justify-content: center;
+}
+
+.mat-toolbar-title {
+  max-width: 800px;
+  min-width: 480px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
 .sidenav-container {
   height: 100%;
 }
