--- a/frontend/src/app/parkingAdministration/parkingAdministrationItemEdit/parkingAdministrationItemEdit.component.scss
+++ b/frontend/src/app/parkingAdministration/parkingAdministrationItemEdit/parkingAdministrationItemEdit.component.scss
@@ -1,4 +1,22 @@
+.buttonbox {
+  height: 50px;
+  display: flex;
+  justify-content: flex-end;
+}
+
 .container {
     display: flex;
     justify-content: space-between;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.deleteButton {
+  margin-top: 10px;
+  margin-right: 10px;
+}
+
+.buttonsright {
+  display: flex;
+  gap: 10px;
 }
