chore: moved shared into app, new shared module button-bar-edit, started with eslint, pylint

--- a/frontend/src/app/parkingAdministration/parkingAdministration.component.html
+++ b/frontend/src/app/parkingAdministration/parkingAdministration.component.html
@@ -1,6 +1,6 @@
-<div class="buttonbox">
+<app-shared-button-bar>
   <button routerLink="/parkingAdministrationItemEdit/" mat-mini-fab color="primary" class="addButton"><mat-icon>add</mat-icon></button>
-</div>
+</app-shared-button-bar>
 
 <div class="container">
   <app-parkingAdministrationList [parkings]="parkings" class="parkings"></app-parkingAdministrationList>
