--- a/frontend/src/app/reservation/reservation-edit/reservation-edit.component.html
+++ b/frontend/src/app/reservation/reservation-edit/reservation-edit.component.html
@@ -18,7 +18,7 @@
       </ngx-mat-datetime-picker>
     </mat-form-field>
     <mat-form-field>
-      <input matInput [ngxMatDatetimePicker]="toPicker" placeholder="bis" formControlName="DateTimeTo" >
+      <input matInput [ngxMatDatetimePicker]="toPicker" placeholder="bis" formControlName="DateTimeTo" [value]="this.reservation.DateTimeTo">
       <mat-datepicker-toggle matSuffix [for]="$any(toPicker)">
       </mat-datepicker-toggle>
       <ngx-mat-datetime-picker #toPicker>
@@ -31,7 +31,7 @@
       <input matInput placeholder="IsCanceled" formControlName="IsCanceled" />
     </mat-form-field>
       <mat-form-field>
-        <input matInput placeholder="Betrag" formControlName="Amount" [value]="reservation.Amount | currency: 'CHF' "  />
+        <input matInput placeholder="Betrag" formControlName="Amount" [value]="this.reservation.Amount | currency: 'CHF' "/>
       </mat-form-field>
       <mat-form-field>
       <input matInput placeholder="CHF/h" formControlName="PricePerHour" />
