chore: eslint fixes

--- a/frontend/src/app/account/account.component.html
+++ b/frontend/src/app/account/account.component.html
@@ -1,4 +1,6 @@
-<app-shared-button-bar></app-shared-button-bar>
+<app-shared-button-bar>
+
+</app-shared-button-bar>
 
 <mat-card>
   <mat-nav-list>
