--- a/frontend/src/app/nav-bottom/nav-bottom.component.html
+++ b/frontend/src/app/nav-bottom/nav-bottom.component.html
@@ -1,17 +1,17 @@
 <nav class="bottom-nav">
-  <a class="bottom-nav__destination" routerLink="/parking" routerLinkActive="bottom-nav__destination--active">
+  <a class="bottom-nav__destination action-findParking" routerLink="/parking" routerLinkActive="bottom-nav__destination--active">
     <mat-icon>local_parking</mat-icon>
     <span class="bottom-nav__label">Parkplatz finden</span>
   </a>
-  <a class="bottom-nav__destination" routerLink="/reservation" routerLinkActive="bottom-nav__destination--active" *ngIf="isLoggedIn">
+  <a class="bottom-nav__destination action-reservations" routerLink="/reservation" routerLinkActive="bottom-nav__destination--active" *ngIf="isLoggedIn">
     <mat-icon>receipt_long</mat-icon>
     <span class="bottom-nav__label">Reservationen</span>
   </a>
-  <a class="bottom-nav__destination" routerLink="/account" routerLinkActive="bottom-nav__destination--active" *ngIf="isLoggedIn">
+  <a class="bottom-nav__destination action-settings" routerLink="/account" routerLinkActive="bottom-nav__destination--active" *ngIf="isLoggedIn">
     <mat-icon>person</mat-icon>
     <span class="bottom-nav__label">{{ this.userProfile?.firstName }} {{ this.userProfile?.lastName }}</span>
   </a>
-  <a class="bottom-nav__destination" routerLink="/account" routerLinkActive="bottom-nav__destination--active" *ngIf="!isLoggedIn">
+  <a class="bottom-nav__destination action-login" routerLink="/account" routerLinkActive="bottom-nav__destination--active" *ngIf="!isLoggedIn">
     <mat-icon>login</mat-icon>
     <span class="bottom-nav__label">Anmelden</span>
   </a>
