--- a/frontend/src/app/reservation/reservation-list/reservation-list.component.html
+++ b/frontend/src/app/reservation/reservation-list/reservation-list.component.html
@@ -1,7 +1,8 @@
 <mat-card>
   <mat-list>
     <mat-list-item *ngFor="let reservation of reservations">
-      {{ reservation.Parking.Street }} {{ reservation.Parking.StreetNo }}{{ reservation.Parking.StreetNoSuffix }}, {{ reservation.Parking.ZIP }} {{ reservation.Parking.Location }}
+      <!-- {{ reservation.Parking.Street }} {{ reservation.Parking.StreetNo }}{{ reservation.Parking.StreetNoSuffix }}, {{ reservation.Parking.ZIP }} {{ reservation.Parking.Location }} -->
+      {{ reservation.ID_Parking }}
       <!-- {{ reservation.DateTimeFrom | date:'medium'}} - {{reservation.DateTimeTo | date:'shortTime'}} -->
       {{ reservation.Amount }} CHF
       <button mat-button *ngIf="!reservation.IsCanceled"> Storno</button>
