--- a/frontend/src/app/reservation/reservation-edit/reservation-edit.component.html
+++ b/frontend/src/app/reservation/reservation-edit/reservation-edit.component.html
@@ -17,6 +17,7 @@
       <ngx-mat-datetime-picker #fromPicker>
       </ngx-mat-datetime-picker>
       <mat-error *ngIf="f.DateTimeFrom.errors?.dateInPast" class="alert alert-danger">{{f.DateTimeFrom.errors?.dateInPast.value}}</mat-error>
+      <mat-error *ngIf="f.DateTimeFrom.errors?.dateBeforeValidator" class="alert alert-danger"> {{f.DateTimeFrom.errors?.dateBeforeValidator.value}}</mat-error>
     </mat-form-field>
     <mat-form-field>
       <input matInput [ngxMatDatetimePicker]="toPicker" placeholder="bis" formControlName="DateTimeTo" [value]="this.reservation.DateTimeTo">
