--- a/frontend/src/app/reservation/reservation-edit/reservation-edit.component.html
+++ b/frontend/src/app/reservation/reservation-edit/reservation-edit.component.html
@@ -42,7 +42,7 @@
 
     <mat-card-actions>
       <button type="button" mat-flat-button routerLink="/reservation/">abbrechen</button>
-      <button type="submit" mat-raised-button color="primary" *ngIf="!reservation?.id" [disabled]="reservationForm.invalid || reservationForm.pristine">hinzufügen</button>
+      <button type="submit" mat-raised-button color="primary" *ngIf="!reservation?.id" [disabled]="reservationForm.invalid">hinzufügen</button>
       <button type="button" mat-button *ngIf="reservation?.id" (click)="deleteReservation(reservation.id)">löschen</button>
       <button type="submit" mat-raised-button color="primary" *ngIf="reservation?.id" [disabled]="reservationForm.invalid || reservationForm.pristine">speichern</button>
     </mat-card-actions>
