--- a/frontend/src/app/parking/parkingList/parkingList.component.html
+++ b/frontend/src/app/parking/parkingList/parkingList.component.html
@@ -5,18 +5,17 @@
       <mat-list-item>
 
         <img mat-list-icon src="/assets/parking_logo.png" />
-          {{ parkItem.parking?.Street }} {{ parkItem.parking?.StreetNo
-          }}{{ parkItem.parking?.StreetNoSuffix }}<br>
-          {{ parkItem.parking?.ZIP }}
-          {{ parkItem.parking?.Location }}
-          <button
-            (click)="onAddReservation(parkItem.parking?.id)"
-            mat-mini-fab
-            color="primary"
-          >
-            <mat-icon *ngIf="parkItem.isPending">remove</mat-icon>
-            <mat-icon *ngIf="!parkItem.isPending">add</mat-icon>
-          </button>
+        {{ parkItem.parking?.Street }} {{ parkItem.parking?.StreetNo}}{{ parkItem.parking?.StreetNoSuffix }}<br>
+        {{ parkItem.parking?.ZIP }}
+         {{ parkItem.parking?.Location }}
+        <button
+        (click)="onAddReservation(parkItem.parking?.id)"
+          mat-mini-fab
+          color="primary"
+        >
+          <mat-icon *ngIf="parkItem.isPending">remove</mat-icon>
+          <mat-icon *ngIf="!parkItem.isPending">add</mat-icon>
+        </button>
 
       </mat-list-item>
         <app-reservation-add *ngIf="parkItem.isPending"
