--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -16,11 +16,11 @@ $my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
 html, body { height: 100%; }
 body {
   margin: 0;
-  // background: url("assets/parking_bg_1920.jpg") no-repeat center center fixed;
-  background-image: -webkit-image-set(url("assets/parking_bg_1920.jpg") 1x, url("assets/parking_bg_1920.jpg") 2x);
-  background-image: image-set(url("assets/parking_bg_1920.jpg") 1x, url("assets/parking_bg_1920.jpg") 2x);
+  background-image: -webkit-image-set(url("assets/parking_bg_1920.webp") 1x, url("assets/parking_bg_1920.webp") 2x);
+  background-image: image-set(url("assets/parking_bg_1920.webp") 1x, url("assets/parking_bg_1920.webp") 2x);
   background-position: center;
   background-size: cover;
+  background-attachment: fixed;
 }
 
 .mat-card {
